2003-11-29  bulia byak <bulia@dr.com>

	* shortening tooltips, new verb and menu command for zoom to page width 

2003-11-29 Bryce Harrington <brycehar@bryceharrington.com>

	* README:  Updating "Sodipodi" to "Inkscape", removing some
	  obviously obsolete bits.

	* inkscape.1.in, inkscape.pod:  Totally rewriting manpage from
	  scratch.  The old one appeared to be for some other application,
	  because it was just a list of options, 90% of which aren't
	  implemented.  I chose to do it in POD for convenience, but hand
	  edited the 1.in file to remove bits about "Perl Documentation",
	  etc.
	
2003-11-29  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/utest/Makefile.am, src/utest/utest.c, src/utest/utest.inc,
	  src/utest/utest.h, src/xml/Makefile.am, src/xml/repr-action-test.c:
	  Split utest.inc into utest.h and utest.c.  Update users.

	  Make utest.c,utest.h formatting conform more to doc/coding-style.txt.

	  Have utest.c built into libutest.a (see src/utest/Makefile.am
	  comments).

	* src/xml/repr-action.c (reverse_log): Add doc comment.  Rename some vars.

	* src/xml/repr-action.c (sp_repr_replay_log, sp_repr_undo_log),
	  src/xml/repr-action.h, src/document-undo.c (sp_document_cancel,
	  sp_document_redo, sp_document_undo): Remove the unused doc
	  argument to sp_repr_replay_log, sp_repr_undo_log.  Update callers.

2003-11-28  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* extensions/ai_input.inkmod, extensions/dia.inkmod,
	  extensions/svgz_input.inkmod, extensions/svgz_output.inkmod:
	  Change the filename extension from `foo' to `.foo'; i.e. the
	  filename must end in `.foo' to be considered a match, rather
	  than merely ending in `foo'.

	  It appears that the sole users of this data are in src/system.c
	  (open_internal, save_internal).

	  I've found no documentation needing updating, according to
	  `rgrep -i extension doc'.

	* src/system.c (open_internal, save_internal): Minor effec tweaks:
	  fewer strlen calculations.
